--- a/brendwall_frontend/product.html
+++ b/brendwall_frontend/product.html
@@ -1,63 +1,127 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Management</title>
+    <title>Управление продуктами</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .shake {
+            animation: shake 0.5s;
+        }
+
+        @keyframes shake {
+            0%, 100% { transform: translateX(0); }
+            25% { transform: translateX(-5px); }
+            50% { transform: translateX(5px); }
+            75% { transform: translateX(-5px); }
+        }
+
+        .error-message {
+            color: red;
+            font-size: 0.875rem;
+        }
+
+        .success-message {
+            color: green;
+            font-size: 1.25rem;
+            border: 2px solid green;
+            padding: 10px;
+            margin-top: 10px;
+            display: inline-block;
+        }
+    </style>
 </head>
 <body>
-    <h1>Add New Product</h1>
-    <form id="product-form">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required><br><br>
+    <div class="container">
+        <h1 class="my-4">Добавить новый продукт</h1>
 
-        <label for="description">Description:</label>
-        <input type="text" id="description" name="description" required><br><br>
+        <!-- Success Message -->
+        <div id="success-message" class="success-message d-none"></div>
 
-        <label for="price">Price:</label>
-        <input type="number" id="price" name="price" required><br><br>
+        <form id="product-form">
+            <div class="mb-3">
+                <label for="name" class="form-label">Название:</label>
+                <input type="text" class="form-control" id="name" name="name" required>
+                <div id="name-error" class="error-message"></div>
+            </div>
 
-        <button type="submit">Submit</button>
-    </form>
+            <div class="mb-3">
+                <label for="description" class="form-label">Описание:</label>
+                <input type="text" class="form-control" id="description" name="description" required>
+                <div id="description-error" class="error-message"></div>
+            </div>
 
-    <h2>Product List</h2>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Price</th>
-            </tr>
-        </thead>
-        <tbody id="product-list"></tbody>
-    </table>
+            <div class="mb-3">
+                <label for="price" class="form-label">Цена:</label>
+                <input type="number" class="form-control" id="price" name="price" step="0.01" required>
+                <div id="price-error" class="error-message"></div>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Отправить</button>
+        </form>
+
+        <h2 class="my-4">Список продуктов</h2>
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>Название</th>
+                    <th>Описание</th>
+                    <th>Цена</th>
+                </tr>
+            </thead>
+            <tbody id="product-list"></tbody>
+        </table>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
-        // Function to fetch and display all products
+        // Функция для загрузки и отображения всех продуктов
         function loadProducts() {
             fetch('http://127.0.0.1:8000/api/products/')
                 .then(response => response.json())
                 .then(data => {
                     const productList = document.getElementById('product-list');
-                    productList.innerHTML = '';  // Clear the current list
+                    productList.innerHTML = '';  // Очищаем текущий список
                     data.forEach(product => {
-                        productList.innerHTML += `
-                            <tr>
-                                <td>${product.name}</td>
-                                <td>${product.description}</td>
-                                <td>${product.price}</td>
-                            </tr>
+                        const row = document.createElement('tr');
+                        row.innerHTML = `
+                            <td>${product.name}</td>
+                            <td>${product.description}</td>
+                            <td>${product.price}</td>
                         `;
+                        productList.appendChild(row);
                     });
                 });
         }
 
-        // Initial load of product list
+        // Загрузка списка продуктов при инициализации
         loadProducts();
 
-        // Handle form submission for adding new products
+        // Удаление сообщений об ошибках и успехе через 5 секунд
+        function clearMessages() {
+            setTimeout(() => {
+                document.getElementById('name-error').textContent = '';
+                document.getElementById('description-error').textContent = '';
+                document.getElementById('price-error').textContent = '';
+                document.getElementById('success-message').classList.add('d-none');
+            }, 5000);
+        }
+
+        // Функция для отображения сообщения об успехе
+        function showSuccessMessage(message) {
+            const successMessage = document.getElementById('success-message');
+            successMessage.textContent = message;
+            successMessage.classList.remove('d-none');
+            clearMessages();  // Скрыть через 5 секунд
+        }
+
+        // Обработка отправки формы для добавления нового продукта
         document.getElementById('product-form').addEventListener('submit', function(event) {
-            event.preventDefault();  // Prevent form from reloading the page
+            event.preventDefault();  // Предотвращаем перезагрузку страницы
 
             const formData = {
                 name: document.getElementById('name').value,
@@ -65,7 +129,12 @@
                 price: document.getElementById('price').value
             };
 
-            // POST the new product to the API
+            // Очищаем предыдущие сообщения об ошибках
+            document.getElementById('name-error').textContent = '';
+            document.getElementById('price-error').textContent = '';
+            document.getElementById('description-error').textContent = '';
+
+            // Отправляем новый продукт на сервер
             fetch('http://127.0.0.1:8000/api/products/', {
                 method: 'POST',
                 headers: {
@@ -73,13 +142,40 @@
                 },
                 body: JSON.stringify(formData)
             })
-            .then(response => response.json())
+            .then(response => {
+                if (!response.ok) {
+                    return response.json().then(errorData => {
+                        if (errorData.name) {
+                            const nameField = document.getElementById('name');
+                            nameField.classList.add('shake');
+                            document.getElementById('name-error').textContent = errorData.name.name || errorData.name[0];
+                        }
+                        if (errorData.price) {
+                            const priceField = document.getElementById('price');
+                            priceField.classList.add('shake');
+                            document.getElementById('price-error').textContent = errorData.price[0];
+                        }
+                        clearMessages();
+                        throw new Error('Ошибка добавления продукта');
+                    });
+                }
+                return response.json();  // Обрабатываем ответ при успешной отправке
+            })
             .then(data => {
-                alert('Product added successfully!');
-                loadProducts();  // Reload the product list after adding
+                showSuccessMessage('Продукт успешно добавлен!');
+
+                // Обновляем список продуктов
+                loadProducts();
             })
             .catch(error => {
                 console.error('Error:', error);
+            });
+        });
+
+        // Убираем эффект тряски после его применения
+        document.querySelectorAll('input').forEach(input => {
+            input.addEventListener('animationend', function() {
+                input.classList.remove('shake');
             });
         });
     </script>
